--- a/style.css
+++ b/style.css
@@ -1,22 +1,52 @@
 :root {
-    --theme-fondo: #D6DBDF;
-    --theme-color: white;
+    --tema-fondo: #D6DBDF;
+    --tema-color: white;
     --primary-color: #124f88;
-    --secundary-color: #F7C331;
-    --text-color-inverse: white;
-    --text-color: black;
+    --secundario-color: #F7C331;
+    --texto-color-inverso: white;
+    --texto-color: black;
     --navbar-shallow-color: #e5e5e5;
     --menu-mobile-background-color: #3A4460;
+    --boton-mobile-background-color: #808b96 ;
+    --boton-mobile-copiar-background-color: #34495e ;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: var(--theme-fondo);
-    color: var(--text-color);
+    background-color: var(--tema-fondo);
+    color: var(--texto-color);
+    padding: 7em 3px 30px 40px;
 }
 
 /**header**/
 a {
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--primary-color);
+}
+.horizontal-padding{
+    padding-left: 25px;
+    padding-right: 25px;
+
+}
+.vertical-padding{
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+@media(max-width:950px){
+    body {        
+        padding: 7em 20px 30px 30px;
+    }    
+}
+
+@media(min-width:950px){
+    .horizontal-padding{
+        padding-left: 70px;
+        padding-right: 70px;
+    
+    }
+    .vertical-padding{
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 }
